<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>maxon_epos2_driver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jsliu@jhu.edu">josh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>cisst_ros2_crtk</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
